--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
                 </div>
             </div>
         </div>
+       <h4>Visit my <a href="https://github.com/Veronika-Kikot/Weather-app-ShecodesPlus" target="_blank" rel="noreferrer">GitHub</a></h4>
     </div>
 
     <script src="src/index.js"></script>
