--- a/index.html
+++ b/index.html
@@ -23,22 +23,22 @@
             <div class="input">
                 <div class="input-group">
                     <form action="">
-                        <input type="text" class="form-control" placeholder="Enter city"
+                        <input type="text" class="form-control" id="city-input" placeholder="Enter city"
                             aria-label="Recipient's username with two button addons" />
                         <input type="submit" value="Search" class="btn btn-primary" />
                         <input type="click" value="Current" class="btn btn-outline-secondary" id="current" />
                     </form>
                 </div>
-                <a href="">Lviv</a>
-                <a href="">Odessa</a>
-                <a href="">Kharkiv</a>
-                <a href="">Dnipro</a>
+                <!-- <a href="">Lviv</a>
+          <a href="">Odessa</a>
+          <a href="">Kharkiv</a>
+          <a href="">Dnipro</a> -->
             </div>
 
             <div class="weather-info row">
                 <div class="left col-5">
                     <div class="temp">
-                        <h1>⛅️ <span id="temp-number">25ºC</span></h1>
+                        <h1>⛅️ <span id="temp-number"></span></h1>
                         <!-- <span class="units">
                 <a href="#" id="cels">ºC</a> |
                 <a href="#" id="far">ºF</a>
@@ -48,15 +48,15 @@
                 <div class="col-4">
                     <p>
                         <!-- Precipitation: <span id="precipitation">14</span>% <br /> -->
-                        Humidity: <span id="humidity"> 82</span>% <br />
-                        Wind: <span id="wind">5</span>km/h
+                        Humidity: <span id="humidity"></span>% <br />
+                        Wind: <span id="wind"></span>km/h
                     </p>
                 </div>
                 <div class="right col-3">
-                    <h2>Kyiv</h2>
+                    <h2></h2>
                     <p>
                         <span id="date-time"> 11:57 Friday, 5</span><br />
-                        <span id="description"> Cloudy</span>
+                        <span id="description"></span>
                     </p>
                 </div>
             </div>
@@ -88,7 +88,6 @@
                 </div>
             </div>
         </div>
-       <h4>Visit my <a href="https://github.com/Veronika-Kikot/Weather-app-ShecodesPlus" target="_blank" rel="noreferrer">GitHub</a></h4>
     </div>
 
     <script src="src/index.js"></script>
